tests/machine/x/go/inner_join.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/inner_join.go:36:32: cannot use func() []map[string]any {…}() (value of type []map[string]any) as []map[string]int value in variable declaration

1: //go:build ignore
